--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,10 @@
 {
-  "cleanUrls": true,
+  "cleanUrls": false,
   "trailingSlash": false,
   "rewrites": [
     {
-      "source": "/admin",
+      "source": "/admin$",
       "destination": "/admin/index.html"
-    },
-    {
-      "source": "/admin/(.*)",
-      "destination": "/admin/$1"
     }
   ],
   "headers": [
