--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,6 @@
 {
-  "cleanUrls": false,
+  "cleanUrls": true,
   "trailingSlash": false,
-  "rewrites": [
-    {
-      "source": "/admin$",
-      "destination": "/admin/index.html"
-    }
-  ],
   "headers": [
     {
       "source": "/(.*)",
